# ClearlyAware

./: .gitignore  README.md
backend/: .gitignore  .tool-versions  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 06ea166a5a56_add_transactions_table.py  0986813a836f_create_users_table.py  2f6276aaae32_timezone_aware_timestamps.py  50d1061f2975_create_budget_table.py  63b37f46987e_initial_schema.py  93236acaffa4_add_plaid_items_table.py
backend/app/: config.py  database.py  dependencies.py  main.py  seed.py
backend/app/middleware/: auth.py
backend/app/models/: budget.py  category.py  plaid_item.py  transaction.py  user.py
backend/app/routers/: auth.py  budgets.py  dashboard.py  plaid.py
backend/app/schemas/: __init__.py  budget.py  dashboard.py  plaid.py  user.py
backend/app/services/: auth.py  budget.py  dashboard.py  plaid_service.py  transaction.py
backend/app/utils/: security.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
